[package]
name = "twolong_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
percent-encoding = "2.3.1"
postgres = "0.19.7"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
tokio = "1.35.1"
tokio-postgres = "0.7.10"
url = "2.5.0"
