[package]
name = "twolong_rs"
version = "0.1.0"
edition = "2021"
default-run = "twolong_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
dotenv = "0.15.0"
easy-log = "0.1.1"
postgres = "0.19.7"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt"] }
tokio-postgres = "0.7.10"
url = "2.5.0"
